--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ html{
 .main-header .container
 {
 
-	display: flex;
+    display: flex;
+    position: relative;
 	align-items: center;
     justify-content: space-between;
 }
@@ -449,7 +450,7 @@ h2{
     display: grid;
     padding-top: 4em;
     grid-template-columns: repeat(3,minmax(15em,1fr));
-    grid-auto-rows: auto;
+    /* grid-auto-rows: auto; */
     row-gap: 3em;
     column-gap: .2em;
 
@@ -520,14 +521,6 @@ h2{
     padding: 1em;
 }
 
-
-
-
-/* @media (max-width:768px){
-    .films__grid{
-        grid-auto-rows: 20em;
-    }
-} */
 
 
 @media (max-width: 1199px)
@@ -679,7 +672,7 @@ h2{
         margin: 0 4em;
         padding-top: 4em;
         grid-template-columns: repeat(1,1fr);
-        grid-auto-rows: auto;
+        /* grid-auto-rows: auto; */
         row-gap: 1em;
         column-gap: .1em;
     
