--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ html{
 
 .banner{
     width: 100%;
-    height: 30vh;
+    height: 40vh;
     position: relative;
     border: 1px solid black;
    
@@ -115,7 +115,8 @@ html{
 .banner__img {
     width: 100%;
     height: 100%;
-    display: absolute;
+    position: absolute;
+    display: block;
     top:0;
     object-fit: cover;
     object-position: top;
@@ -418,6 +419,7 @@ h2{
 
 
 .button{
+    width: 100%;
     background-color: transparent;
     border: 2px solid rgb(209, 207, 207);
     color: rgb(209, 207, 207);;
@@ -425,7 +427,6 @@ h2{
     padding: .5em;
     font-weight: bold;
     transition: all .4s;
-    border-radius: 10%;
 }
 
 .button:hover{
