--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,33 @@ html{
     color: lightgray;
 }
 
-.hamb{
-    display:none;
+
+.panel-btn{
+    display: none;
+     position: fixed;
+    right: 1vw;
+    /* bottom: 1vh; */
+    z-index: 2000;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    padding: 0;
+    
+    justify-content: center;
+    align-items: center; 
 }
+
+.hamburger{
+    display: none!important;
+    color: white!important;
+}
+
+.header.is-active{
+    transform: translate(0,0);
+}
+
+
+
 
 .saltarina{
     width: 1.5em;
@@ -526,6 +550,9 @@ h2{
 
 @media (max-width: 1199px)
 {
+
+    
+
 	.container
 	{
 		width: 960px;
@@ -607,13 +634,6 @@ h2{
         align-items: center;
     }
 
-    .hamb{
-        color: white;
-        display: block;
-        font-size: 2.2em;
-        align-content: center;
-        
-    }
 
     #portada{
         height: 85vh;
@@ -629,10 +649,29 @@ h2{
     }
 
     .main-header ul{
+        /* margin-left: 2em; */
+        background-color: #2e2f3a;
         flex-direction: column;
-        display: none;
+        width: 100%;
+        /* height: 25vh; */
+        margin: auto;
+        /* display: none; */
         transition: all 0.4s ease;
-	    transform: translateX(100%); /*lo traslada un 100% de su tamaño para afuera*/
+	    transform: translate(0,-100%); /*lo traslada un 100% de su tamaño para afuera*/
+    }
+
+    .main-header ul li{
+        margin-top: 1em;
+        font-size: 2em;
+        margin-bottom: 1em;
+    }
+
+    .main-header ul.is-active{
+        transform:translate(0,0);
+    }
+
+    .hamburger{
+        display:flex!important;
     }
 
     .saltarina{
@@ -748,4 +787,21 @@ h2{
     .personajes-eleccion{
         flex-direction: column;
     }
+
+     .films__grid{
+        display: grid;
+        padding-top: 4em;
+        grid-template-columns: repeat(auto-fill, 1fr);
+        grid-auto-rows: 35em; 
+        row-gap: 3em;
+        column-gap: .2em;
+    
+    }
+    
+    
+    #films img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+   
 }
